productions/veadk/archives/1.1.5/en/components/tools/image-generate.mdx
---
title: "Image generation"
zh_link: "/productions/veadk/archives/1.1.5/zh/components/tools/image-generate"
---

## Overview

Tool identifier `image_generate`.

`image_generate` generates images from text. For image-to-image editing, see `image_edit`.

Import path: `from veadk.tools.builtin_tools.image_generate import image_generate`

## Environment & prerequisites

<Warning>
Requirements:

1. Configure the API key for the agent's reasoning model.
2. Configure the image-generation model name (`MODEL_IMAGE_NAME`).
</Warning>

Environment variables:

- `MODEL_IMAGE_API_KEY`: API key for the image-generation model; falls back to `MODEL_AGENT_API_KEY` and then to `model.api_key` from the config file when unset
- `MODEL_AGENT_API_KEY`: API key for the agent's reasoning model
- `MODEL_IMAGE_NAME`: image-generation model name
- `MODEL_IMAGE_API_BASE`: image-generation model API endpoint; defaults to the ModelArk endpoint

<Note>
Credentials are resolved at tool execution time, not at import time. Importing the tool module does not initialize a client or require credentials to be present.
</Note>

`config.yaml` keys:

```yaml title="config.yaml" lines
model:
  image:
    name: doubao-seedream-5-0-260128
    api_base: https://ark.cn-beijing.volces.com/api/v3/
    api_key: your-api-key-here
```

## Usage

```python title="examples/tools/image_generate/agent.py" lines
import asyncio

from veadk import Agent, Runner
from veadk.memory.short_term_memory import ShortTermMemory
from veadk.tools.builtin_tools.image_generate import image_generate

agent = Agent(
    name="image_generate_agent",
    model_name="doubao-seed-2-1-pro-260628",
    description="Generate images on demand.",
    instruction="You are an image-generation expert. Call image_generate to create images for the user.",
    tools=[image_generate],
)

runner = Runner(agent=agent, short_term_memory=ShortTermMemory())


async def main():
    response = await runner.run("Generate a cute kitten")
    print(response)


if __name__ == "__main__":
    asyncio.run(main())
```

## Notes

<Note>
`image_generate` is the canonical import name. `from veadk.tools.builtin_tools.generate_image import image_generate` still works, but the `generate_image` module is deprecated — use `image_generate` instead.
</Note>
